Cleaned files + fixed up addToAvoid()